tests/sumo/extended/calibrator/errors/invalid_flow/errors.sumo
Warning: No flow intervals in calibrator 'slow'.
Error: Attribute 'id' is missing in definition of flow
Error: Flow cannot be created
Quitting (on error).
